  reporting and debugging the issue.
* Better detect Cray Slingshot NICs, thanks to Edgar Leon.
* Add support for Die objects and Module groups on Windows.
* Only filter-out Dies that are identical to their Packages
  when it applies to all Dies.
* Improve hwloc-calc to handle CPU-less NUMA nodes or platforms with
  heterogeneous memory without requiring --nodeset-output.
* The systemd-dbus-api output of hwloc-calc has changed, and
  --nodeset-output-format was added, to support NUMA node outputs.
  Thanks to Pierre Neyron.
* Update NVLink bandwidth and CUDA capabilities up to NVIDIA Blackwell.


Version 2.11.2
--------------
* Add missing CPU info attrs on aarch64 on Linux.
* Use ACPI CPPC on Linux to get better information about cpukinds,
  at least on AMD CPUs.
* Fix crash when manipulating cpukinds after topology
  duplication, thanks to Hadrien Grasland for the report.
* Fix missing input target checks in memattr functions,
  thanks to Hadrien Grasland for the report.
* Fix a memory leak when ignoring NUMA distances on FreeBSD.
* Fix build failure on old Linux distributions without accessat().
* Fix non-Windows importing of XML topologies and CPUID dumps exported
  on Windows.
* hwloc-calc --cpuset-output-format systemd-dbus-api now allows
  to generate AllowedCPUs information for systemd slices.
  See the hwloc-calc manpage for examples. Thanks to Pierre Neyron.
* Some fixes in manpage EXAMPLES and split them into subsections.


Version 2.11.1
--------------
* Fix bash completions, thanks Tavis Rudd.


Version 2.11.0
--------------
* API
  + Add HWLOC_MEMBIND_WEIGHTED_INTERLEAVE memory binding policy on
    Linux 6.9+. Thanks to Honggyu Kim for the patch.
    - weighted_interleave_membind is added to membind support bits.
    - The "weighted" policy is added to the hwloc-bind tool.
  + Add hwloc_obj_set_subtype(). Thanks to Hadrien Grasland for the report.
* GPU support
  + Don't hide the GPU NUMA node on NVIDIA Grace Hopper.